added DMP CFL condition to explicit code and some dissertation work

--- a/doc/dissertation/content/low_order/low_order_scheme_scalar.tex
+++ b/doc/dissertation/content/low_order/low_order_scheme_scalar.tex
@@ -8,7 +8,7 @@ diffusion matrix and low-order system matrix follow.
    form introduced in Section \ref{sec:low_order_viscosity_scalar}:
    \begin{equation}\label{eq:low_order_diffusion_matrix}
      \diffusionmatrixletter\ij^{L,\timeindex} \equiv
-       \sumKSij\mkern-20mu\lowordercellviscosity[\timeindex]
+       \sumKSij\lowordercellviscosity[\timeindex]
        \localviscbilinearform{\cell}{j}{i} \eqp
    \end{equation}
 \end{definition}
