--- a/doc/dissertation/content/low_order/low_order_viscosity_scalar.tex
+++ b/doc/dissertation/content/low_order/low_order_viscosity_scalar.tex
@@ -33,7 +33,7 @@ The definition of the low-order viscosity follows.
    \begin{equation}
      \lowordercellviscosity[\timeindex] \equiv \max\limits_{i\ne j\in\indicescell}
      \frac{\max(0,\ssmatrixletter\ij^\timeindex)}
-     {-\mkern-20mu\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}}
+     {-\sumKSij[T]\localviscbilinearform{T}{j}{i}}
      \eqc
    \end{equation}
    where $\ssmatrixletter\ij^\timeindex$ is the $i,j$th entry of the Galerkin
