--- a/doc/dissertation/content/low_order/m_matrix.tex
+++ b/doc/dissertation/content/low_order/m_matrix.tex
@@ -14,7 +14,7 @@ a discrete maximum principle for the low-order solution to be proven in Section
 This proof begins by bounding the term $\diffusionmatrixletter\ij^{L,\timeindex}$:
 \begin{eqnarray*}
    \diffusionmatrixletter\ij^{L,\timeindex}=
-     \sumKSij\mkern-20mu\lowordercellviscosity[\timeindex]
+     \sumKSij\lowordercellviscosity[\timeindex]
    \localviscbilinearform{\cell}{j}{i}
    & = & \sumKSij\max\limits_{k\ne \ell\in \indicescell}
      \pr{\frac{\max(0,\ssmatrixletter_{k,\ell}^\timeindex)}
@@ -27,11 +27,11 @@ Since $\localviscbilinearform{\cell}{j}{i} < 0$ for $j\ne i$ and $y_i \leq
 \begin{eqnarray*}
    \diffusionmatrixletter\ij^{L,\timeindex} & \le &
      \sumKSij \frac{\max(0,\ssmatrixletter\ij^\timeindex)}
-   {\mkern10mu-\mkern-20mu\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}}
+   {-\sumKSij[T]\localviscbilinearform{T}{j}{i}}
    \localviscbilinearform{\cell}{j}{i} \eqc\\
    &  =  & -\max(0,\ssmatrixletter\ij^\timeindex)
-     \frac{\sumKSij\mkern-20mu\localviscbilinearform{\cell}{j}{i}}
-     {\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}} \eqc\\
+     \frac{\sumKSij\localviscbilinearform{\cell}{j}{i}}
+     {\sumKSij[T]\localviscbilinearform{T}{j}{i}} \eqc\\
    &  =  & -\max(0,\ssmatrixletter\ij^\timeindex) \eqc\\
    & \le & -\ssmatrixletter\ij^\timeindex \eqp
 \end{eqnarray*}
