some work on dam break phase diagram

--- a/doc/diagrams/dam_break_phase/dam_break_phase.tex
+++ b/doc/diagrams/dam_break_phase/dam_break_phase.tex
@@ -75,35 +75,31 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(682,704){\makebox(0,0)[r]{\strut{}-3}}%
-      \put(682,1286){\makebox(0,0)[r]{\strut{}-2}}%
-      \put(682,1867){\makebox(0,0)[r]{\strut{}-1}}%
-      \put(682,2449){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(682,3030){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(682,3612){\makebox(0,0)[r]{\strut{} 2}}%
-      \put(682,4193){\makebox(0,0)[r]{\strut{} 3}}%
-      \put(682,4775){\makebox(0,0)[r]{\strut{} 4}}%
-      \put(814,484){\makebox(0,0){\strut{} 0}}%
-      \put(1563,484){\makebox(0,0){\strut{} 0.5}}%
-      \put(2311,484){\makebox(0,0){\strut{} 1}}%
-      \put(3060,484){\makebox(0,0){\strut{} 1.5}}%
-      \put(3809,484){\makebox(0,0){\strut{} 2}}%
-      \put(4557,484){\makebox(0,0){\strut{} 2.5}}%
-      \put(5306,484){\makebox(0,0){\strut{} 3}}%
-      \put(6054,484){\makebox(0,0){\strut{} 3.5}}%
-      \put(6803,484){\makebox(0,0){\strut{} 4}}%
-      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$hu$}}}%
-      \put(3808,154){\makebox(0,0){\strut{}$h$}}%
+      \put(462,1698){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(462,2630){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(462,3561){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(462,4493){\makebox(0,0)[r]{\strut{} 3}}%
+      \put(594,1415){\makebox(0,0){\strut{} 0}}%
+      \put(2319,1415){\makebox(0,0){\strut{} 1}}%
+      \put(4043,1415){\makebox(0,0){\strut{} 2}}%
+      \put(5768,1415){\makebox(0,0){\strut{} 3}}%
+      \csname LTb\endcsname%
+      \put(484,4719){\rotatebox{-270}{\makebox(0,0){\strut{}$hu$}}}%
+      \put(6866,1474){\makebox(0,0){\strut{}$h$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(3982,4602){\makebox(0,0)[r]{\strut{}$w_{1,\max}$}}%
+      \put(2970,4602){\makebox(0,0)[r]{\strut{}$w_{1,\max}$}}%
       \csname LTb\endcsname%
-      \put(3982,4382){\makebox(0,0)[r]{\strut{}$w_{2,\min}$}}%
+      \put(2970,4382){\makebox(0,0)[r]{\strut{}$w_{2,\min}$}}%
       \csname LTb\endcsname%
-      \put(3982,4162){\makebox(0,0)[r]{\strut{}$\mathbf{u}(x)$, Galerkin}}%
+      \put(2970,4162){\makebox(0,0)[r]{\strut{}$\mathbf{u}(x,t)$, Exact}}%
       \csname LTb\endcsname%
-      \put(3982,3942){\makebox(0,0)[r]{\strut{}$\mathbf{u}(x)$, Domain-Invariant}}%
+      \put(2970,3942){\makebox(0,0)[r]{\strut{}$\mathbf{u}(x,0)$}}%
+      \csname LTb\endcsname%
+      \put(2970,3722){\makebox(0,0)[r]{\strut{}$\mathbf{u}(x,t)$, Galerkin}}%
+      \csname LTb\endcsname%
+      \put(2970,3502){\makebox(0,0)[r]{\strut{}$\mathbf{u}(x,t)$, DI}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{dam_break_phase}}%
