--- a/doc/diagrams/dam_break_phase/dam_break_height.tex
+++ b/doc/diagrams/dam_break_phase/dam_break_height.tex
@@ -75,34 +75,31 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(418,4939){\rotatebox{-270}{\makebox(0,0){\strut{}$hu$}}}%
-      \put(6734,1474){\makebox(0,0){\strut{}$h$}}%
+      \put(726,704){\makebox(0,0)[r]{\strut{} 0.5}}%
+      \put(726,1383){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(726,2061){\makebox(0,0)[r]{\strut{} 1.5}}%
+      \put(726,2740){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(726,3418){\makebox(0,0)[r]{\strut{} 2.5}}%
+      \put(726,4097){\makebox(0,0)[r]{\strut{} 3}}%
+      \put(726,4775){\makebox(0,0)[r]{\strut{} 3.5}}%
+      \put(1453,484){\makebox(0,0){\strut{}-4}}%
+      \put(2642,484){\makebox(0,0){\strut{}-2}}%
+      \put(3831,484){\makebox(0,0){\strut{} 0}}%
+      \put(5020,484){\makebox(0,0){\strut{} 2}}%
+      \put(6209,484){\makebox(0,0){\strut{} 4}}%
+      \put(220,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$h$}}}%
+      \put(3830,154){\makebox(0,0){\strut{}$x$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(1581,4602){\makebox(0,0)[l]{\strut{}$w_{1,\max}$}}%
+      \put(1845,1317){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, Exact}}%
       \csname LTb\endcsname%
-      \put(1581,4382){\makebox(0,0)[l]{\strut{}$w_{2,\min}$}}%
+      \put(1845,1097){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, Galerkin}}%
       \csname LTb\endcsname%
-      \put(1581,4162){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, Exact}}%
-      \csname LTb\endcsname%
-      \put(1581,3942){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,0)$}}%
-      \csname LTb\endcsname%
-      \put(1581,3722){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, DI}}%
-      \csname LTb\endcsname%
-      \put(1581,3502){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, Galerkin}}%
-      \csname LTb\endcsname%
-      \put(462,1699){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(462,2631){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(462,3563){\makebox(0,0)[r]{\strut{} 2}}%
-      \put(462,4495){\makebox(0,0)[r]{\strut{} 3}}%
-      \put(594,1416){\makebox(0,0){\strut{} 0}}%
-      \put(2319,1416){\makebox(0,0){\strut{} 1}}%
-      \put(4043,1416){\makebox(0,0){\strut{} 2}}%
-      \put(5768,1416){\makebox(0,0){\strut{} 3}}%
+      \put(1845,877){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, DI}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{dam_break_phase}}%
+    \put(0,0){\includegraphics{dam_break_height}}%
     \gplfronttext
   \end{picture}%
 \endgroup
