added slides to defense presentation

--- a/doc/diagrams/dam_break_phase/dam_break_phase.tex
+++ b/doc/diagrams/dam_break_phase/dam_break_phase.tex
@@ -80,17 +80,15 @@
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(1581,4602){\makebox(0,0)[l]{\strut{}$w_{1,\max}$}}%
+      \put(1581,4602){\makebox(0,0)[l]{\strut{}$w_1(\mathbf{u}) = \max_i w_1(\mathbf{u}^0_i)$}}%
       \csname LTb\endcsname%
-      \put(1581,4382){\makebox(0,0)[l]{\strut{}$w_{2,\min}$}}%
+      \put(1581,4382){\makebox(0,0)[l]{\strut{}$w_2(\mathbf{u}) = \min_i w_2(\mathbf{u}^0_i)$}}%
       \csname LTb\endcsname%
       \put(1581,4162){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, Exact}}%
       \csname LTb\endcsname%
       \put(1581,3942){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,0)$}}%
       \csname LTb\endcsname%
       \put(1581,3722){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, DI}}%
-      \csname LTb\endcsname%
-      \put(1581,3502){\makebox(0,0)[l]{\strut{}$\mathbf{u}(x,t)$, Galerkin}}%
       \csname LTb\endcsname%
       \put(462,1699){\makebox(0,0)[r]{\strut{} 0}}%
       \put(462,2631){\makebox(0,0)[r]{\strut{} 1}}%
