--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -7,15 +7,17 @@
 %===============================================================================
 \section{Scalar Transport\label{sec:transport_results}}
 %===============================================================================
+\subsection{Overview}
+  \input{content/results/transport/overview}
 \subsection{Convergence Studies\label{sec:convergence}}
   \subsubsection{Overview\label{sec:convergence_overview}}
     \input{content/results/transport/convergence_overview}
-  \subsubsection{Convergence Study 1\label{sec:mms_sinx}}
-    \input{content/results/transport/mms_sinx/description}
-  \subsubsection{Convergence Study 2\label{sec:mms_x_expt}}
-    \input{content/results/transport/mms_x_expt/description}
-  \subsubsection{Convergence Study 3\label{sec:mms_sinx_expt}}
-    \input{content/results/transport/mms_sinx_expt/description}
+  \subsubsection{Convergence Study 1\label{sec:mms_sinx_ss}}
+    \input{content/results/transport/mms_sinx_ss/description}
+  %\subsubsection{Convergence Study 2\label{sec:mms_x_expt}}
+  %  \input{content/results/transport/mms_x_expt/description}
+  %\subsubsection{Convergence Study 3\label{sec:mms_sinx_expt}}
+  %  \input{content/results/transport/mms_sinx_expt/description}
 \subsection{Void-to-Absorber Test Problem\label{sec:void_to_absorber}}
   \input{content/results/transport/void_to_absorber/description}
 \subsection{Skew Void-to-Absorber Test Problem\label{sec:skew_void_to_absorber}}
