work on results section

--- a/doc/dissertation/content/conclusions/conclusions.tex
+++ b/doc/dissertation/content/conclusions/conclusions.tex
@@ -1,1 +1,25 @@
-My conclusions will go here.
+This research investigated a number of different numerical methods for
+the solution of hyperbolic PDEs with the continuous finite element
+method.
+
+A first-order, positivity-preserving, DMP-satisfying method
+for scalar hyperbolic PDEs, recently developed by Guermond and Nazarov
+\cite{guermond_firstorder} for scalar hyperbolic PDEs, was extended
+to hyperbolic PDEs including a reaction term and extraneous source term.
+
+A first-order, positivity-preserving, and domain-invariant method for systems
+of hyperbolic PDEs, recently developed by Guermond and Popov
+\cite{guermond_invariantdomain} for systems of hyperbolic PDEs,
+has been applied to the shallow water equations with flat bottom topography.
+
+The entropy viscosity method developed by Guermond and others \cite{guermond_ev}
+was applied to scalar transport and the shallow water equations, with flat
+or non-flat bottom topography. Results show that addition of this entropy-based
+artificial dissipation results in convergence to the entropy solution
+and reduces the onset of spurious oscillations but in general does not eliminate
+them completely, and thus the entropy viscosity method is not immune to
+solution negativities.
+
+The flux corrected transport (FCT) algorithm, originally developed by Boris
+and Book \cite{borisbook}
+
