--- a/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
+++ b/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
@@ -95,4 +95,4 @@ bounds is critical to the success of the FCT algorithm.
    \label{fig:mms_sinx_ss_convergence_vs}
 \end{figure}
 %-------------------------------------------------------------------------------
-
+\clearpage
