--- a/doc/dissertation/content/results/transport/three_region/description.tex
+++ b/doc/dissertation/content/results/transport/three_region/description.tex
@@ -81,3 +81,5 @@ Entropy Time Integrator & BE\\
    \label{fig:three_region}
 \end{figure}
 %-------------------------------------------------------------------------------
+
+\clearpage
