--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -173,3 +173,5 @@ Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\
    \label{fig:void_to_absorber_3D}
 \end{figure}
 %-------------------------------------------------------------------------------
+
+\clearpage
