--- a/doc/dissertation/dedication.tex
+++ b/doc/dissertation/dedication.tex
@@ -1,12 +1,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                           DEDICATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter*{DEDICATION}
+%\chapter*{DEDICATION}
 % Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
 \addcontentsline{toc}{chapter}{DEDICATION}  
 
 %\indent
-\vspace{3.5in}
+\vspace*{2in}
 \begin{center}To Siobh\'{a}n\end{center}
 
 \pagebreak{}
