--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -14,8 +14,8 @@
     \input{content/results/transport/convergence_overview}
   \subsubsection{Convergence Study 1\label{sec:mms_sinx_ss}}
     \input{content/results/transport/mms_sinx_ss/description}
-  %\subsubsection{Convergence Study 2\label{sec:mms_x_expt}}
-  %  \input{content/results/transport/mms_x_expt/description}
+  \subsubsection{Convergence Study 2\label{sec:absorber_ss}}
+    \input{content/results/transport/absorber_ss/description}
   %\subsubsection{Convergence Study 3\label{sec:mms_sinx_expt}}
   %  \input{content/results/transport/mms_sinx_expt/description}
 \subsection{Void-to-Absorber Test Problem\label{sec:void_to_absorber}}
